executable(
    'yaapd',
    'main.cpp',
	'hw/hdt_hw.cpp',
	'hw/header_hw.cpp',
	'hw/jtag_hw.cpp',
	'hw/csjtag_hw.cpp',
	'hw/relay_hw.cpp',
	'hw/system_hw.cpp',
	'hw/triggers_hw.cpp',
	'hw/gpuDebug_hw.cpp',
	'hw/lpcPostCode_hw.cpp',
	'hw/lpcRomEmu_hw.cpp',
	'hw/mux_hw.cpp',

    dependencies: [
        gpiodcxx_dep,
        yaap_shared_dep,
    ],
    install: true,
)
